--- a/register-agree.html
+++ b/register-agree.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/variable/pretendardvariable.css" />
     <title>Viral | 회원가입 - 약관동의</title>
-
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="css/main.css">
 
@@ -75,8 +75,8 @@
                             </div>
                             <div class="terms-content">
                                 <p>제1조(목적 등)</p>
-                                <p>① Acts29비전빌리지 서비스 약관(이하 "본 약관"이라 합니다)은 이용자가 Acts29비전빌리지에서 제공하는 인터넷 관련 서비스(이하 "서비스"라 합니다)를 이용함에 있어 이용자와 "Acts29비전빌리지"의 권리·의무 및 책임사항을 규정함을 목적으로 합니다.</p>
-                                <p>② 이용자가 되고자 하는 자가 "Acts29비전빌리지"이 정한 소정의 절차를 거쳐서 "등록하기" 단추를 누르면 본 약관에 동의하는 것으로 간주합니다. 본 약관에 정하는 이외의 이용자와 "Acts 29비전빌리지"의 권리, 의무 및 책임사항에 관해서는 전기통신사업법 기타 대한민국의 관련 법령과 상관습에 의합니다.</p>
+                                <p><span>&#9312;</span> Acts29비전빌리지 서비스 약관(이하 "본 약관"이라 합니다)은 이용자가 Acts29비전빌리지에서 제공하는 인터넷 관련 서비스(이하 "서비스"라 합니다)를 이용함에 있어 이용자와 "Acts29비전빌리지"의 권리·의무 및 책임사항을 규정함을 목적으로 합니다.</p>
+                                <p><span>&#9313;</span> 이용자가 되고자 하는 자가 "Acts29비전빌리지"이 정한 소정의 절차를 거쳐서 "등록하기" 단추를 누르면 본 약관에 동의하는 것으로 간주합니다. 본 약관에 정하는 이외의 이용자와 "Acts 29비전빌리지"의 권리, 의무 및 책임사항에 관해서는 전기통신사업법 기타 대한민국의 관련 법령과 상관습에 의합니다.</p>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis maiores molestiae minus voluptates nam debitis corrupti mollitia possimus aspernatur quia, dolorem, dignissimos assumenda rem porro totam quam quae laborum? Expedita?
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem rerum iste minima voluptas consequatur assumenda consequuntur earum. Molestiae corporis earum accusamus repellendus esse quia reiciendis at, velit enim quo mollitia.
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem rerum iste minima voluptas consequatur assumenda consequuntur earum. Molestiae corporis earum accusamus repellendus esse quia reiciendis at, velit enim quo mollitia.
@@ -103,8 +103,8 @@
                             </div>
                             <div class="terms-content">
                                 <p>제1조(목적 등)</p>
-                                <p>① Acts29비전빌리지 서비스 약관(이하 "본 약관"이라 합니다)은 이용자가 Acts29비전빌리지에서 제공하는 인터넷 관련 서비스(이하 "서비스"라 합니다)를 이용함에 있어 이용자와 "Acts29비전빌리지"의 권리·의무 및 책임사항을 규정함을 목적으로 합니다.</p>
-                                <p>② 이용자가 되고자 하는 자가 "Acts29비전빌리지"이 정한 소정의 절차를 거쳐서 "등록하기" 단추를 누르면 본 약관에 동의하는 것으로 간주합니다. 본 약관에 정하는 이외의 이용자와 "Acts 29비전빌리지"의 권리, 의무 및 책임사항에 관해서는 전기통신사업법 기타 대한민국의 관련 법령과 상관습에 의합니다.</p>
+                                <p><span>&#9312;</span> Acts29비전빌리지 서비스 약관(이하 "본 약관"이라 합니다)은 이용자가 Acts29비전빌리지에서 제공하는 인터넷 관련 서비스(이하 "서비스"라 합니다)를 이용함에 있어 이용자와 "Acts29비전빌리지"의 권리·의무 및 책임사항을 규정함을 목적으로 합니다.</p>
+                                <p><span>&#9313;</span> 이용자가 되고자 하는 자가 "Acts29비전빌리지"이 정한 소정의 절차를 거쳐서 "등록하기" 단추를 누르면 본 약관에 동의하는 것으로 간주합니다. 본 약관에 정하는 이외의 이용자와 "Acts 29비전빌리지"의 권리, 의무 및 책임사항에 관해서는 전기통신사업법 기타 대한민국의 관련 법령과 상관습에 의합니다.</p>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis maiores molestiae minus voluptates nam debitis corrupti mollitia possimus aspernatur quia, dolorem, dignissimos assumenda rem porro totam quam quae laborum? Expedita?
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem rerum iste minima voluptas consequatur assumenda consequuntur earum. Molestiae corporis earum accusamus repellendus esse quia reiciendis at, velit enim quo mollitia.
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem rerum iste minima voluptas consequatur assumenda consequuntur earum. Molestiae corporis earum accusamus repellendus esse quia reiciendis at, velit enim quo mollitia.
@@ -131,8 +131,8 @@
                             </div>
                             <div class="terms-content">
                                 <p>제1조(목적 등)</p>
-                                <p>① Acts29비전빌리지 서비스 약관(이하 "본 약관"이라 합니다)은 이용자가 Acts29비전빌리지에서 제공하는 인터넷 관련 서비스(이하 "서비스"라 합니다)를 이용함에 있어 이용자와 "Acts29비전빌리지"의 권리·의무 및 책임사항을 규정함을 목적으로 합니다.</p>
-                                <p>② 이용자가 되고자 하는 자가 "Acts29비전빌리지"이 정한 소정의 절차를 거쳐서 "등록하기" 단추를 누르면 본 약관에 동의하는 것으로 간주합니다. 본 약관에 정하는 이외의 이용자와 "Acts 29비전빌리지"의 권리, 의무 및 책임사항에 관해서는 전기통신사업법 기타 대한민국의 관련 법령과 상관습에 의합니다.</p>
+                                <p><span>&#9312;</span> Acts29비전빌리지 서비스 약관(이하 "본 약관"이라 합니다)은 이용자가 Acts29비전빌리지에서 제공하는 인터넷 관련 서비스(이하 "서비스"라 합니다)를 이용함에 있어 이용자와 "Acts29비전빌리지"의 권리·의무 및 책임사항을 규정함을 목적으로 합니다.</p>
+                                <p><span>&#9313;</span> 이용자가 되고자 하는 자가 "Acts29비전빌리지"이 정한 소정의 절차를 거쳐서 "등록하기" 단추를 누르면 본 약관에 동의하는 것으로 간주합니다. 본 약관에 정하는 이외의 이용자와 "Acts 29비전빌리지"의 권리, 의무 및 책임사항에 관해서는 전기통신사업법 기타 대한민국의 관련 법령과 상관습에 의합니다.</p>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis maiores molestiae minus voluptates nam debitis corrupti mollitia possimus aspernatur quia, dolorem, dignissimos assumenda rem porro totam quam quae laborum? Expedita?
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem rerum iste minima voluptas consequatur assumenda consequuntur earum. Molestiae corporis earum accusamus repellendus esse quia reiciendis at, velit enim quo mollitia.
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem rerum iste minima voluptas consequatur assumenda consequuntur earum. Molestiae corporis earum accusamus repellendus esse quia reiciendis at, velit enim quo mollitia.
@@ -159,8 +159,8 @@
                             </div>
                             <div class="terms-content">
                                 <p>제1조(목적 등)</p>
-                                <p>① Acts29비전빌리지 서비스 약관(이하 "본 약관"이라 합니다)은 이용자가 Acts29비전빌리지에서 제공하는 인터넷 관련 서비스(이하 "서비스"라 합니다)를 이용함에 있어 이용자와 "Acts29비전빌리지"의 권리·의무 및 책임사항을 규정함을 목적으로 합니다.</p>
-                                <p>② 이용자가 되고자 하는 자가 "Acts29비전빌리지"이 정한 소정의 절차를 거쳐서 "등록하기" 단추를 누르면 본 약관에 동의하는 것으로 간주합니다. 본 약관에 정하는 이외의 이용자와 "Acts 29비전빌리지"의 권리, 의무 및 책임사항에 관해서는 전기통신사업법 기타 대한민국의 관련 법령과 상관습에 의합니다.</p>
+                                <p><span>&#9312;</span> Acts29비전빌리지 서비스 약관(이하 "본 약관"이라 합니다)은 이용자가 Acts29비전빌리지에서 제공하는 인터넷 관련 서비스(이하 "서비스"라 합니다)를 이용함에 있어 이용자와 "Acts29비전빌리지"의 권리·의무 및 책임사항을 규정함을 목적으로 합니다.</p>
+                                <p><span>&#9313;</span> 이용자가 되고자 하는 자가 "Acts29비전빌리지"이 정한 소정의 절차를 거쳐서 "등록하기" 단추를 누르면 본 약관에 동의하는 것으로 간주합니다. 본 약관에 정하는 이외의 이용자와 "Acts 29비전빌리지"의 권리, 의무 및 책임사항에 관해서는 전기통신사업법 기타 대한민국의 관련 법령과 상관습에 의합니다.</p>
                                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis maiores molestiae minus voluptates nam debitis corrupti mollitia possimus aspernatur quia, dolorem, dignissimos assumenda rem porro totam quam quae laborum? Expedita?
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem rerum iste minima voluptas consequatur assumenda consequuntur earum. Molestiae corporis earum accusamus repellendus esse quia reiciendis at, velit enim quo mollitia.
                                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem rerum iste minima voluptas consequatur assumenda consequuntur earum. Molestiae corporis earum accusamus repellendus esse quia reiciendis at, velit enim quo mollitia.
