--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                             <span></span>
                             <span></span>
                         </button>
+
                         <h1 class="logo">
                             <a href="index.html">
                                 <img class="logo-img" src="img/offcanvas-logo.svg" alt="viral-main-logo">
@@ -27,7 +28,8 @@
                         </h1>
                         <span class="beta-badge">Beta</span>
                     </div>
-                    <!-- 로그인 전  -->
+
+                    <!-- 로그인 전 보여짐 -->
                     <ul class="right-content log-befor">
                         <li>
                             <a class="loginBtn" href="login.html">로그인</a>
@@ -36,7 +38,7 @@
                             <a class="signupBtn" href="register-hp.html">회원가입</a>
                         </li>
                     </ul>
-                    <!-- 로그인 후  -->
+                    <!-- 로그인 후 보여짐 -->
                     <ul class="right-content log-after">
                         <li>
                             <a class="loginBtn" href="login.html">
@@ -46,7 +48,7 @@
                         </li> 
                         <li>
                             <a class="signupBtn" href="#">
-                                <img src="img/time-count.svg" alt="무료 횟수 카운트"> 5회
+                                <img src="img/time-count.svg" alt="무료 횟수 카운트"> 5/5
                             </a>
                         </li>
                         <li class="add-icon">
@@ -59,41 +61,74 @@
             </div>
         </header>
 
-        <main id="main" class="user-auth">
+        <main id="main" class="main">
             <div class= "inner"> 
-                <div class="user-auth-wrap login-wrap">
-                    <h3 class="main-title">로그인</h3>
-                    <div class="input_wrap">
-                        <div class="input_container">
-                            <label for="id" class="input_title">
-                                <input type="text" id="id" placeholder="아이디">
-                            </label>
-                        </div>
-                        <div class="input_container m-top20">
-                            <label for="password" class="password_container">
-                                <input id="password" type="password" placeholder="비밀번호" oninput="updatePassword()">
-                                <span class="eyeBtn">
-                                    <svg width="20" height="14" viewBox="0 0 20 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M9.99997 0.25C5.91882 0.25 2.36847 2.51686 0.542558 5.85557C0.152487 6.56882 0.15248 7.43102 0.54254 8.14428C2.36843 11.4831 5.91882 13.75 10 13.75C14.0812 13.75 17.6315 11.4831 19.4574 8.14443C19.8475 7.43118 19.8475 6.56898 19.4575 5.85572C17.6316 2.51694 14.0812 0.25 9.99997 0.25ZM10 4.75C8.75736 4.75 7.75 5.75736 7.75 7C7.75 8.24264 8.75736 9.25 10 9.25C10.6805 9.25 11.2904 8.94794 11.7029 8.47059C11.0168 8.33275 10.5 7.72673 10.5 7C10.5 6.27327 11.0168 5.66725 11.7029 5.52941C11.2904 5.05206 10.6805 4.75 10 4.75ZM6.25 7C6.25 4.92893 7.92893 3.25 10 3.25C12.0711 3.25 13.75 4.92893 13.75 7C13.75 9.07107 12.0711 10.75 10 10.75C7.92893 10.75 6.25 9.07107 6.25 7Z" fill="#999"/>
-                                    </svg>
-                                </span>
-                            </label>
+                <div class="menu-area">
+                    <div class="content">
+                        <div class="offcanvas-wrap">
+                            <div class="offcanvas">
+                                <div class="offcanvas-body">
+                                    <nav id="nav">
+                                        <ul class="gnb">
+                                            <li class="gnb-item">
+                                                <a href="#">
+                                                    <span class="gnb-txt">
+                                                        <img src="img/menu/my-project.svg" alt="내 프로젝트">내 프로젝트
+                                                    </span>
+                                                </a>
+                                            </li>
+                                            <li class="gnb-item gnb-training">
+                                                <a href="#" class="focusGnb">
+                                                    <span class="gnb-txt-cont">
+                                                        <div class="gnb-txt gnb-focus-txt">
+                                                            <img src="img/menu/template-atv.svg" alt="템플릿"> 템플릿
+                                                        </div>
+                                                        <div class="drop-arrow">
+                                                            <span class="drop-left"></span>
+                                                            <span class="drop-right"></span>
+                                                        </div>
+                                                    </span>
+                                                </a>
+                                                <ul class="gnb-sub">
+                                                    <li class="gnb-sub-item">
+                                                        <a href="#">비디오 템플릿</a>
+                                                    </li>
+                                                    <li class="gnb-sub-item">
+                                                        <a href="#">카드뉴스 템플릿</a>
+                                                    </li>
+                                                </ul>
+                                            </li>
+                                            <li class="gnb-item">
+                                                <a href="#">
+                                                    <span class="gnb-txt">
+                                                        <img src="img/menu/subscribe.svg" alt="구독하기">구독하기
+                                                    </span>
+                                                </a>
+                                            </li>
+                                            <li class="gnb-item">
+                                                <a href="#">
+                                                    <span class="gnb-txt">
+                                                        <img src="img/menu/notice.svg" alt="공지사항">공지사항
+                                                    </span>
+                                                </a>
+                                            </li>
+                                            <li class="gnb-item" class="gnb-txt">
+                                                <a href="#">
+                                                    <span class="gnb-txt">
+                                                        <img src="img/menu/service-center.svg" alt="고객센터">고객센터
+                                                    </span>
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </nav>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="btn_wrap">
-                        <button type="button" class="finishBtn" onclick="location.href='home-after.html'">로그인</button>
-                    </div>
-                    <ul class="user_account">
-                        <li>
-                            <a href="register-hp.html">회원가입</a>
-                        </li>
-                        <li>
-                            <a href="find-id.html">아이디 찾기</a>
-                        </li>
-                        <li>
-                            <a href="find-pw.html">비밀번호 찾기</a>
-                        </li>
-                    </ul>
+                </div>
+                <div class="content-area">
+                    <div>0</div>
+                    <div>0</div>
                 </div>
             </div>
         </main>
@@ -187,48 +222,6 @@
     <script src="js/script.js"></script>
 
     <script>
-        function updatePassword() {
-            // 비밀번호 처리 로직
-        }
-
-        const eyeBtn = document.querySelector('.eyeBtn');
-        const passwordInput = document.getElementById('password');
-
-        eyeBtn.addEventListener('click', () => {
-            if (passwordInput.type === 'password') {
-                passwordInput.type = 'text'; // 비밀번호 표시
-            } else {
-                passwordInput.type = 'password'; // 비밀번호 숨기기
-            }
-        });
-        
-        //-- 패스워드 눈 아이콘 클릭
-        let $eyeBtn = $('.eyeBtn');
-
-        $eyeBtn.click(function(){
-            let $path = $(this).find('svg > path');
-            let pathColor = $path.css('fill');
-
-            if (pathColor === 'rgb(153, 153, 153)') {
-                $path.css({fill : '#222'}); 
-            } else {
-                $path.css({fill : '#999'});
-            }
-        });
-
-        //-- 로그인 상태 유지 클릭
-        let $keepLogin = $('.keep_login');
-
-        $keepLogin.click(function(){
-            let $rect = $(this).find('svg > rect');
-            let rectColor = $rect.css('fill');
-
-            if (rectColor === 'rgb(211, 211, 211)') { /* d3d3d3 */
-                $(this).css({color : '#999'});
-            } else if (rectColor === 'rgb(10, 56, 124)') {
-                $(this).css({color : '#222'});
-            }
-        });
     </script>
 </body>
 </html>
